Stats enriched with Mode and Total columns